syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.dpunkt.myaktion.grpc";
option java_outer_classname = "HelloGrpcProto";

package hello;

service MyAktionMonitor {
    rpc sendDonation () returns (CampaignID, Donation) {}
}

message Donation{
    double amount = 1;
    string donorName = 2;
}

message CampaignID{
    int32 campaignID = 1;
}


